--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -172,7 +172,8 @@
 </section>
 
 <script>
-    const API = "http://localhost:9090/api";
+    const API = "https://payrollmanagement-jgev.onrender.com/api";
+
 
     function showSection(id) {
       document.querySelectorAll("section").forEach(s => s.classList.remove("active"));
